--- a/package.json
+++ b/package.json
@@ -18,22 +18,27 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "email-templates": "^11.1.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "helmet": "^8.0.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.5.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "nodemailer": "^6.9.12",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.7",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.2",
     "typeorm": "^0.3.17",
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.13",
     "@types/email-templates": "^10.0.4",
     "@types/express": "^4.17.17",
